--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -8,41 +7,50 @@
   <style>
     body {
       font-family: sans-serif;
+      font-size: 18px; /* 全体を大きく */
       padding: 2rem;
       line-height: 1.8;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
       background: #fefefe;
     }
+
     h1 {
       color: #2c3e50;
+      font-size: 28px; /* タイトルをより大きく */
       text-align: center;
+      margin-bottom: 1rem;
     }
+
     .tip {
       margin-top: 2rem;
       background: #e3f2fd;
-      padding: 1rem;
-      border-radius: 8px;
+      padding: 1.5rem;
+      border-radius: 10px;
     }
+
     .title {
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 20px;
       margin-bottom: 0.5rem;
     }
+
     label {
       font-weight: bold;
       display: block;
       margin-top: 2rem;
     }
+
     input[type="date"] {
-      font-size: 1rem;
-      padding: 0.4rem;
+      font-size: 1.1rem;
+      padding: 0.6rem;
       margin-top: 0.5rem;
     }
   </style>
 </head>
 <body>
   <h1>医学生のための1日1つTips</h1>
+
   <label for="datePicker">日付を選んで表示：</label>
   <input type="date" id="datePicker" />
 
