--- a/index.html
+++ b/index.html
@@ -6,59 +6,88 @@
   <title>医学生のための1日1つTips</title>
   <style>
     body {
-      font-family: sans-serif;
-      font-size: 18px; /* 全体を大きく */
-      padding: 2rem;
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      font-size: 18px;
       line-height: 1.8;
-      max-width: 800px;
-      margin: auto;
+      padding: 1.5rem;
+      margin: 0;
       background: #fefefe;
+      color: #222;
     }
 
     h1 {
-      color: #2c3e50;
-      font-size: 28px; /* タイトルをより大きく */
+      font-size: 26px;
       text-align: center;
+      color: #2c3e50;
       margin-bottom: 1rem;
     }
 
+    .container {
+      max-width: 700px;
+      margin: auto;
+    }
+
     .tip {
-      margin-top: 2rem;
+      margin-top: 1.5rem;
       background: #e3f2fd;
-      padding: 1.5rem;
-      border-radius: 10px;
+      padding: 1.2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
 
     .title {
-      font-weight: bold;
       font-size: 20px;
+      font-weight: bold;
       margin-bottom: 0.5rem;
     }
 
     label {
-      font-weight: bold;
       display: block;
-      margin-top: 2rem;
+      font-weight: bold;
+      margin: 1.5rem 0 0.5rem;
     }
 
     input[type="date"] {
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       padding: 0.6rem;
-      margin-top: 0.5rem;
+      width: 100%;
+      max-width: 300px;
+      box-sizing: border-box;
+    }
+
+    @media (max-width: 480px) {
+      body {
+        font-size: 17px;
+        padding: 1rem;
+      }
+
+      h1 {
+        font-size: 22px;
+      }
+
+      .tip {
+        padding: 1rem;
+      }
+
+      input[type="date"] {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>医学生のための1日1つTips</h1>
+  <div class="container">
+    <h1>医学生のための1日1つTips</h1>
 
-  <label for="datePicker">日付を選んで表示：</label>
-  <input type="date" id="datePicker" />
+    <label for="datePicker">日付を選んで表示：</label>
+    <input type="date" id="datePicker" />
 
-  <div class="tip">
-    <div class="title" id="title"></div>
-    <div id="tip"></div>
-    <hr/>
-    <div id="explanation"></div>
+    <div class="tip">
+      <div class="title" id="title"></div>
+      <div id="tip"></div>
+      <hr />
+      <div id="explanation"></div>
+    </div>
   </div>
 
   <script src="data.js"></script>
